<?php
    abstract class JSONObject
        extends JsonDeserializer
        implements JsonSerializable
    {}
?>
